// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Passing a onRemove callback should render the remove icon 1`] = `
<section
  class="block expanded"
>
  <div
    class="handle"
  />
  <div
    class="content"
  >
    <header
      class="header"
    >
      <div
        class="icons"
      >
        <span
          aria-label="su-trash"
          class="su-trash clickable"
          role="button"
          tabindex="0"
        />
        <span
          aria-label="su-x"
          class="su-x clickable"
          role="button"
          tabindex="0"
        />
      </div>
    </header>
    <article>
      Some block content
    </article>
  </div>
</section>
`;

exports[`Render a collapsed block 1`] = `
<section
  class="block"
>
  <div
    class="handle"
  />
  <div
    class="content"
  >
    <article>
      Some block content
    </article>
  </div>
</section>
`;

exports[`Render an expanded block 1`] = `
<section
  class="block expanded"
>
  <div
    class="handle"
  />
  <div
    class="content"
  >
    <header
      class="header"
    >
      <div
        class="icons"
      >
        <span
          aria-label="su-x"
          class="su-x clickable"
          role="button"
          tabindex="0"
        />
      </div>
    </header>
    <article>
      Some block content
    </article>
  </div>
</section>
`;

exports[`Render an expanded block with a multiple types 1`] = `
<section
  class="block expanded"
>
  <div
    class="handle"
  />
  <div
    class="content"
  >
    <header
      class="header"
    >
      <div
        class="types"
      >
        <div
          class="select"
        >
          <button
            class="displayValue"
          >
            <div
              aria-label="Type1"
              class="croppedText"
              title="Type1"
            >
              <div
                aria-hidden="true"
                class="front"
              >
                Typ
              </div>
              <div
                aria-hidden="true"
                class="back"
              >
                <span>
                  e1
                </span>
              </div>
              <div
                class="whole"
              >
                Type1
              </div>
            </div>
            <span
              aria-label="su-arrow-down"
              class="toggle su-arrow-down"
            />
          </button>
        </div>
      </div>
      <div
        class="icons"
      >
        <span
          aria-label="su-x"
          class="su-x clickable"
          role="button"
          tabindex="0"
        />
      </div>
    </header>
    <article>
      Some block content
    </article>
  </div>
</section>
`;

exports[`Render an expanded block with a single type 1`] = `
<section
  class="block expanded"
>
  <div
    class="handle"
  />
  <div
    class="content"
  >
    <header
      class="header"
    >
      <div
        class="icons"
      >
        <span
          aria-label="su-x"
          class="su-x clickable"
          role="button"
          tabindex="0"
        />
      </div>
    </header>
    <article>
      Some block content
    </article>
  </div>
</section>
`;

exports[`Render the dragHandle prop if passed 1`] = `
<section
  class="block"
>
  <div
    class="handle"
  >
    <span>
      Test
    </span>
  </div>
  <div
    class="content"
  >
    <article>
      Block Content with custom drag handle
    </article>
  </div>
</section>
`;
